# thermohubclient

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  conda-install-dependencies.sh  environment.devenv.yml  hub-connection-config.json  install-dependencies.sh
ThermoHubClient/: AqlQueries.h  CMakeLists.txt  DatabaseClient.cpp  DatabaseClient.h  ThermoHubClient.h
ThermoHubClient/common/: Exception.cpp  Exception.h
ThermoHubClient/formulaparser/: FormulaParser.cpp  FormulaParser.h
ci/appveyor/: build.bat  install-dependencies.bat  install.bat  test.bat
ci/pipelines/: install-osx.sh  install.sh  test.sh
ci/travis/: install.sh  test.sh
cmake/modules/: ThermoHubClientConfig.cmake.in  ThermoHubClientFindDeps.cmake  ThermoHubClientInstallCMakeConfigFiles.cmake
pytests/: test_databaseclient.py
python/: CMakeLists.txt  install-dependencies.sh
python/pyThermoHubClient/: CMakeLists.txt  PyThermoHubClient.cpp  PyThermoHubClient.hpp  pyDatabaseClient.cpp
python/thermohubclient/: __init__.py
